# amazon-chat-completions-server

./: .dockerignore  .env.example  .gitignore  .gitmessage  Dockerfile  LICENSE  README.md  RELEASE.md  VERSIONING.md  VERSION_MANAGEMENT.md  _config.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  run_tests.py  test_response.py  test_streaming.py
.github/workflows/: application-tests.yml  auto-version.yml  build.yml  ci-tests.yml  container-tests.yml  docker-build.yml  docker-publish.yml  integration-tests.yml  pages.yml  pypi_publish.yml  real-api-tests.yml  release.yml
docs/: AWS_AUTHENTICATION.md  FILES_API.md  Gemfile  README.md  _config.yml  api-reference.md  architecture.md  cli-reference.md  core-components.md  development.md  extending.md  getting-started.md  index.md  knowledge_bases.md  packaging_guide.md  real-api-testing.md  server_and_cli.md  testing.md  usage.md
docs/guides/: architecture.md  aws-authentication.md  core-components.md  index.md  packaging.md  testing.md  usage.md
docs/modules/: adapters.md  bedrock_adapter.md  core.md  openai_adapter.md  services.md  utils.md
examples/: file_query_example.py  file_upload_example.py  knowledge_base_example.py
research/: research.md
scripts/: README.md  bump_version.py  release.sh  setup_conventional_commits.sh
src/amazon_chat_completions_server/: main.py
src/amazon_chat_completions_server/adapters/: base_adapter.py  bedrock_to_openai_adapter.py  openai_adapter.py
src/amazon_chat_completions_server/adapters/bedrock/: ai21_strategy.py  bedrock_adapter.py  bedrock_adapter_strategy_abc.py  bedrock_models.py  claude_strategy.py  cohere_strategy.py  meta_strategy.py  mistral_strategy.py  nova_strategy.py  stability_strategy.py  titan_strategy.py  writer_strategy.py
src/amazon_chat_completions_server/api/: app.py  errors.py
src/amazon_chat_completions_server/api/dependencies/: services.py
src/amazon_chat_completions_server/api/middleware/: auth.py  logging.py
src/amazon_chat_completions_server/api/routes/: bedrock.py  chat.py  models.py  universal.py
src/amazon_chat_completions_server/api/schemas/: requests.py  responses.py
src/amazon_chat_completions_server/cli/: chat_history.py  error_handling.py  formatters.py  main.py
src/amazon_chat_completions_server/core/: bedrock_models.py  exceptions.py  models.py
src/amazon_chat_completions_server/services/: bedrock_service.py  concrete_services.py  llm_service_abc.py  llm_service_factory.py  openai_service.py
src/amazon_chat_completions_server/utils/: api_client.py  config_loader.py  logger_setup.py  request_detector.py
src/open_amazon_chat_completions_server/: main.py
src/open_amazon_chat_completions_server/adapters/: base_adapter.py  openai_adapter.py
src/open_amazon_chat_completions_server/adapters/bedrock/: bedrock_adapter.py  bedrock_adapter_strategy_abc.py  meta_strategy.py  mistral_strategy.py  nova_strategy.py  titan_strategy.py  writer_strategy.py
src/open_amazon_chat_completions_server/api/: app.py
src/open_amazon_chat_completions_server/api/middleware/: auth.py  logging.py
src/open_amazon_chat_completions_server/api/routes/: chat.py  files.py  models.py
src/open_amazon_chat_completions_server/api/schemas/: file_schemas.py  requests.py  responses.py
src/open_amazon_chat_completions_server/cli/: chat_history.py  error_handling.py  formatters.py  main.py
src/open_amazon_chat_completions_server/core/: models.py
src/open_amazon_chat_completions_server/services/: bedrock_service.py  concrete_services.py  file_processing_service.py  file_service.py  knowledge_base_integration_service.py  llm_service_abc.py  llm_service_factory.py  openai_service.py
src/open_amazon_chat_completions_server/utils/: api_client.py  config_loader.py  knowledge_base_detector.py  logger_setup.py  request_detector.py
src/open_bedrock_server/: __init__.py  _version.py  main.py
src/open_bedrock_server/adapters/: bedrock_to_openai_adapter.py  openai_adapter.py
src/open_bedrock_server/adapters/bedrock/: ai21_strategy.py  bedrock_adapter_strategy_abc.py  claude_strategy.py  cohere_strategy.py  stability_strategy.py
src/open_bedrock_server/api/: app.py
src/open_bedrock_server/api/routes/: chat.py  files.py  knowledge_bases.py  models.py
src/open_bedrock_server/cli/: error_handling.py  main.py
src/open_bedrock_server/core/: bedrock_models.py  exceptions.py  knowledge_base_models.py  models.py
src/open_bedrock_server/services/: bedrock_service.py  file_service.py  knowledge_base_service.py  llm_service_factory.py  openai_service.py
src/open_bedrock_server/utils/: api_client.py  config_loader.py
tests/: conftest.py  test_auth.py  test_aws_auth.py  test_bedrock_chat.py  test_chat.py  test_files_endpoint.py  test_main.py  test_models.py  test_real_api_integration.py
tests/adapters/: test_bedrock_adapter_routing.py  test_bedrock_strategies.py  test_bedrock_to_openai_adapter.py  test_openai_adapter.py
tests/adapters/bedrock/: test_claude_strategy.py
tests/api/: test_bedrock_endpoints.py  test_knowledge_base_routes.py  test_unified_model_routing.py  test_universal_endpoint.py
tests/cli/: test_chat_history.py  test_commands.py  test_error_handling.py  test_formatters.py  test_knowledge_base_commands.py
tests/core/: test_bedrock_models.py  test_knowledge_base_models.py  test_models.py
tests/services/: test_knowledge_base_integration_service.py  test_knowledge_base_service.py
tests/utils/: test_knowledge_base_detector.py  test_request_detector.py
