[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open_bedrock_server"
dynamic = ["version"]
authors = [
  {name = "teabranch", email = "teller@tipalti.com"},
]
description = "A unified, provider-agnostic chat completions API server that seamlessly integrates OpenAI and AWS Bedrock through a single endpoint with intelligent format detection and conversion."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
maintainers = [
  {name = "teabranch", email = "teller@tipalti.com"},
]
keywords = ["aws", "bedrock", "openai", "api", "chat", "completions", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.1",
    "pydantic>=2.5.0",
    "uvicorn[standard]>=0.24.0",
    "boto3>=1.34.0",
    "click>=8.1.7",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    "openai>=1.3.0",
    "colorama>=0.4.6",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.2",
    "pillow>=10.1.0",
    "python-magic>=0.4.27",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "pydantic-settings>=2.1.0",
    "markdown>=3.5.1",
    "jinja2>=3.1.2",
    "requests>=2.25.0",
    "tenacity>=8.2.0",
]

[project.urls]
"Homepage" = "https://github.com/teabranch/open-bedrock-server"
"Bug Tracker" = "https://github.com/teabranch/open-bedrock-server/issues"
"Documentation" = "https://github.com/teabranch/open-bedrock-server#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "flake8>=6.1.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
bedrock-chat = "open_bedrock_server.cli.main:cli"

[tool.hatch.version]
path = "src/open_bedrock_server/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.sdist]
include = [
    "/src/open_bedrock_server",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/open_bedrock_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--cov=src/open_bedrock_server",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["open_bedrock_server"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "magic.*",
    "PyPDF2.*",
    "docx.*",
    "openpyxl.*",
]
ignore_missing_imports = true
